--- a/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
@@ -207,7 +207,7 @@ whiteruthenia.3.a:0 "그 제안을 수락한다!"
 whiteruthenia.3.b:0 "벨로루시를 그들 자신의 운명에 맡긴다."
 whiteruthenia.3.c:0 "우리는 무력으로 그것들을 다시 통합할 것이다."
 whiteruthenia.4.t:0 "벨로루시가 러시아를 위해 제국 조약을 포기하다"
-whiteruthenia.4.d:0 "그들의 새로운 왕 지기문트 아래에 있는 배신자 벨로루시는 제국 조약을 떠났습니다. 베를린 주재 벨로루시 대사는 벨로루시가 스스로 결정을 내릴 수 있는 주권 국가라고 주장하는 서한을 제국 조약에 공식적으로 제출했습니다. 더욱 충격적인 것은, 벨로루시는 앞으로 나아가서 러시아와의 공식적인 동맹을 체결했습니다. 이 터무니없는 배신은 팽창주의 러시아의 위협에 직면하여 우리의 동방에 대한 방어 계획을 완전히 좌절시켰습니다. 일부 관료들은 차분한 장성급 인사들이 전쟁에 나가기를 갈망하고 있지만, 서방 세계에서의 어떤 전쟁이 시작되기도 전에 우리가 벨로루시를 이길 수 있다고 확신했습니다."
+whiteruthenia.4.d:0 "그들의 새로운 왕 지그문트 아래에 있는 배신자 벨로루시는 제국 조약을 떠났습니다. 베를린 주재 벨로루시 대사는 벨로루시가 스스로 결정을 내릴 수 있는 주권 국가라고 주장하는 서한을 제국 조약에 공식적으로 제출했습니다. 더욱 충격적인 것은, 벨로루시는 앞으로 나아가서 러시아와의 공식적인 동맹을 체결했습니다. 이 터무니없는 배신은 팽창주의 러시아의 위협에 직면하여 우리의 동방에 대한 방어 계획을 완전히 좌절시켰습니다. 일부 관료들은 차분한 장성급 인사들이 전쟁에 나가기를 갈망하고 있지만, 서방 세계에서의 어떤 전쟁이 시작되기도 전에 우리가 벨로루시를 이길 수 있다고 확신했습니다."
 whiteruthenia.4.a:0 "어쨌든 그것들은 쓸모없었다."
 whiteruthenia.4.b:0 "우리는 이 신흥국들을 무너뜨릴 것이다!"
 whiteruthenia.5.t:0 "벨로루시가 제국 조약을 포기하다"
@@ -523,83 +523,83 @@ whiteruthenia.98.a:0 "마침내!"
 
 ### Focuses ###
 WHR_crisis_reaction:0 "검은 월요일 대응"
-WHR_crisis_reaction_desc:0 "Belorussia has been heavily German-dominated since the declaration of independence from Russia, and has typically lacked the industry to assert itself economically. The effects of this predicament have finally come home to roost after the collapse of the German stock market, and it is clear that Belorussia must develop economically if it is to recover."
+WHR_crisis_reaction_desc:0 "벨로루시는 러시아로부터의 독립 선언 이후 독일이 지배해 왔고, 일반적으로 경제적으로서 자기 주장을 할 산업이 부족했습니다. 독일 주식시장이 붕괴된 이후 이러한 곤경에 따른 영향은 마침내 고비를 넘겼으며, 벨로루시가 회복되려면 경제적으로 발전해야 할 것은 분명합니다."
 WHR_urbanisation:0 "도시화 촉진"
-WHR_urbanisation_desc:0 "One of Belorussia's main hindrances to economic development is how spread-out its people are, with many workers in the city of Minsk being of Jewish descent. If Belorussia is to develop the people must be encouraged to move to the capital."
+WHR_urbanisation_desc:0 "벨로루시의 경제발전을 저해하는 주요 원인 중 하나는 민스크의 많은 노동자들이 유대인 출신이라는 점에서 사람들이 어떻게 퍼져 나가는가 입니다. 벨로루시가 사람들을 발전시키려면 수도로 이주하도록 격려해야 합니다."
 WHR_industrialisation:0 "산업화 촉진"
-WHR_industrialisation_desc:0 "Now that we have begun to encourage our people to settle in the cities we must start to promote industry, the basis of a modern economy, if Belorussia is to at last begin to prosper and take its place among the nations of the world."
+WHR_industrialisation_desc:0 "이제 우리 민족이 도시에 정착하도록 격려하기 시작했고, 벨로루시가 마침내 번성하여 세계 여러 나라들 사이에서 자리를 잡으면 현대 경제의 기초인 산업을 촉진시키기 시작해야 합니다."
 WHR_breweries:0 "알코올 산업 자금 조달"
-WHR_breweries_desc:0 "Many of Belorussia's major alcohol producers, such as the Olivaria Brewery and the Minsk Kristall distillery, have suffered great financial losses from the Weltkrieg and the recent Black Monday crisis. If we were to begin to fund them so as to help them to get back on their feet it would aid our economy and allow us to further market our goods internationally."
+WHR_breweries_desc:0 "올리바리아 맥주공장과 민스크 크리스털 증류소 같은 벨로루시의 주요 주류회사들 중 많은 수가 세계대전과 최근의 검은 월요일 위기로 인해 엄청난 재정적 손실을 입었습니다. 만약 우리가 그들이 다시 일어설 수 있도록 돕기 위해 그들에게 자금을 대기 시작한다면, 그것은 우리의 경제에 도움이 될 것이고 우리가 우리의 상품을 국제적으로 더 많이 판매할 수 있게 해줄 것입니다."
 WHR_electronics-industry:0 "전자 부문 개발"
-WHR_electronics-industry_desc:0 "One area of industry that we have a potential future in is in electronics and communications. If we were to begin developing an electronics industry it would give our nation an uncommon advantage and specialty."
+WHR_electronics-industry_desc:0 "우리가 미래를 내다 볼 수있는 분야 중 하나는 전자제품 및 통신분야입니다. 우리가 전자 산업을 발전시키기 시작한다면 그것은 우리 민족에게 드문 이점과 전문성을 부여할 것입니다."
 WHR_revive_war_industry:0 "나바흐루다크 공장 복구"
-WHR_revive_war_industry_desc:0 "Some war industries from the Tsarist era remaining within our lands lie in disrepair, essentially unused since the days of the Weltkrieg. Reviving these industries would allow us to at last be able to build an effective army without relying on foreign support."
+WHR_revive_war_industry_desc:0 "우리 땅에 남아있는 제정 러시아 시대의 일부 군수산업은 파손 상태에 있으며, 세계대전 시절부터는 사용되지 않았습니다. 이러한 산업을 되살리게 되면 우리는 마침내 외국 지원에 의존하지 않고 효과적인 군대를 건설할 수 있게 될 것입니다."
 WHR_MZKT:0 "MZKT 투자"
-WHR_MZKT_desc:0 "Now that we are endeavouring to create a munitions industry in Belorussia we could begin to develop and fund the state-run company MZKT, who could produce equipment, tanks and artillery for the nation."
+WHR_MZKT_desc:0 "이제 우리는 벨로루시의 군수산업을 창설을 위해 노력하고 있기 때문에 우리는 국가를 위해 장비, 전차, 그리고 포병을 생산할 수 있는 국영기업인 MZKT 를 개발하고 자금을 조달하기 시작할 수 있을 것입니다."
 WHR_flexible_industry:0 "산업 유연성"
-WHR_flexible_industry_desc:0 "By ensuring that our factories and workers are trained for flexibility in production, we can allow our factories to quickly convert from producing consumer goods to military supplies or vice versa."
+WHR_flexible_industry_desc:0 "우리의 공장과 근로자들이 생산의 유연성을 훈련받도록 함으로써, 우리는 우리 공장이 소비재 생산에서 군수품 생산으로 또는 그 반대로 빠르게 전환하도록 할 수 있습니다."
 WHR_ethanol:0 "에탄올 연료 연구"
-WHR_ethanol_desc:0 "Belorussia at the moment lacks the resources needed to industrialise and relies on foreign trade. We can compensate for this by assigning a team of researchers to invent and develop ethanol fuel to fuel our industry."
+WHR_ethanol_desc:0 "현재 벨로루시는 산업화에 필요한 자원이 부족하며 대외 무역에 의존하고 있습니다. 우리는 우리 산업에 연료를 공급하기 위해 에탄올 연료를 발명하고 개발할 연구팀을 할당함으로써 이를 보상할 수 있습니다."
 WHR_farming_reform:0 "기계화 농업"
-WHR_farming_reform_desc:0 "Across the world farming technology has begun to improve making the process of farming quicker and more efficient. Despite this Belorussia has remained in the past, further hampering the nation economically. It is time for our farming to step into the future."
+WHR_farming_reform_desc:0 "전 세계적으로 농업 기술은 농업 과정을 더 빠르고 효율적으로 개선하기 시작했습니다. 그럼에도 불구하고 벨로루시는 과거에 계속 남아있어 경제적으로 더욱 어려움을 겪고 있습니다. 우리의 농사가 미래를 향해 나아갈 때입니다."
 WHR_country_railroads:0 "시골 기반시설 개발"
-WHR_country_railroads_desc:0 "Outside of Minsk much of the infrastructure remains basic and insufficient for the modern day, in many cases dating as far back as the Tsarist period. It is clear that improvements need to be made."
+WHR_country_railroads_desc:0 "민스크 외에도 기반시설의 많은 부분이 여전히 기본이며 현대의 경우 부족한 경우가 많습니다. 대부분의 경우 제정 러시아 시대까지 거슬러 올라갑니다. 개선이 필요하다는 것은 분명합니다."
 WHR_drain_marshes:0 "프리피야티 습지 배수"
-WHR_drain_marshes_desc:0 "The dreaded Pripyat Marshes, feared by any invader, form a great natural defence in the west. However there is a lot of potential for land reclamation that could allow us to expand the agricultural and industrial potential of our nation."
+WHR_drain_marshes_desc:0 "그 어떤 침략자도 두려워하던 무서운 프리피야티 습지는 서쪽에서 훌륭한 자연 방어를 이룹니다. 그러나 우리나라의 농업 및 산업 잠재력을 확대할 수 있는 토지 개척 잠재력이 상당합니다."
 WHR_okulovsky_mine:0 "오쿨롭스키 광산 확장"
-WHR_okulovsky_mine_desc:0 "Currently we are forced to import most of our foreign materials due to our lack of resources. However, by exploiting the iron-containing Okulovsky Mine, found near our border with Ukraine, we could began domestically producing steel, lessening our reliance on foreign goodwill."
+WHR_okulovsky_mine_desc:0 "현재 우리는 자원 부족으로 대부분 외국 자원을 수입해야 합니다. 그러나 우크라이나와의 국경 근처에있는 철 함유 오쿨롭스키 광산을 이용함으로써, 국내에서 철강을 생산하기 시작할 수 있고 외국 선의에 대한 의존도를 줄일 수 있습니다."
 WHR_expand_operations:0 "민스크 보크사이트 활용"
-WHR_expand_operations_desc:0 "While we have at last begun to produce steel at home thanks to our exploitation of the Okulovsky Mine, across the country we have also found amounts of Bauxite, which would allow us to begin producing aluminium."
+WHR_expand_operations_desc:0 "오쿨롭스키 광산의 개발 덕분에 마침내 국가에서 강철을 생산하기 시작했고, 또한 알루미늄을 생산할 수 있는 보크사이트도 발견했습니다."
 WHR_oil_shale:0 "프리피야티의 전망"
-WHR_oil_shale_desc:0 "Across Belorussia we have discovered many oil shales, particularly in the Pripyat Basin. Access to these resources could finally give us an advantage and allow us to produce oil at home without having to rely on synthetics."
+WHR_oil_shale_desc:0 "우리는 벨로루시 전역에서 특히 프리피아트 습지에서 많은 유혈암을 발견했습니다. 이러한 자원들에 대한 접근은 마침내 우리에게 이점을 줄 수 있고 우리가 합성학에 의존할 필요없이 국가에서 기름을 생산할 수 있게 합니다."
 WHR_BelAZ:0 "벨라즈 설정"
-WHR_BelAZ_desc:0 "In keeping with our programme of modernising Belorussia technologically and fully making use of what resources we have, it would make sense to fund the creation of a state-owned vehicle and machinery manufacturer to develop equipment that will aid the economic and military demands of our nation."
+WHR_BelAZ_desc:0 "벨로루시를 기술적으로 현대화하고 우리가 보유한 자원을 충분히 활용하는 프로그램을 유지하면서 국가 소유의 차량 및 기계 제조업체의 창설에 자금을 투자하여 우리나라의 경제 및 군사적 요구를 지원할 장비를 개발하는 것이 합리적입니다."
 WHR_literacy_campaign:0 "문자해독능력 캠페인"
-WHR_literacy_campaign_desc:0 "Illiteracy has been a problem for far too long in Belorussia, particularly in the rural areas that make up the vast majority of the country and its population. Now that we have abandoned the bickering of the previous years and finally decided upon a script for our language, it is time to banish illiteracy to being a thing of the past."
-WHR_living_conditions:0 "생활 조건 개선"
-WHR_living_conditions_desc:0 "Living conditions in much of the nation are substandard and lead to social tensions and disease outbreaks in many of our towns. It is clear that for the sake of our people something must be done about this."
+WHR_literacy_campaign_desc:0 "벨로루시에서는 문맹이 너무 오랫동안 문제였고, 특히 국가와 인구의 대부분을 차지하는 시골에서 특히 그렇습니다. 우리는 지난 몇 년간의 말다툼을 버리고 마침내 우리 언어의 대본을 결정했으니, 이제 문맹을 과거의 것으로 몰아내야 할 때입니다."
+WHR_living_conditions:0 "생활 여건 개선"
+WHR_living_conditions_desc:0 "많은 국가의 생활 여건은 표준 이하이며 많은 도시에서 사회적 긴장과 질병 발발로 이어집니다. 우리 국민을 위해서 이 일에 관해서 뭔가해야 한다는 것이 분명합니다."
 WHR_workers_rights:0 "고용 권리 개혁"
-WHR_workers_rights_desc:0 "Currently in Belorussia the conditions in our factories and treatment of workers remains poor, especially by international standards. We must take legislative measures to remedy this."
+WHR_workers_rights_desc:0 "특히 국제 표준에 따르면, 현재 벨로루시에서 우리 공장의 상태와 노동자의 처우는 가난한 채로 남아 있습니다. 우리는 이 문제를 해결하기 위한 입법 조치를 취해야 합니다."
 WHR_welfare_state:0 "복지국 설립"
-WHR_welfare_state_desc:0 "While much of Europe has followed Bismarck's example and established a welfare state, providing medical care, pensions and affordable housing, Belorussia has remained in the Tsarist era as a result of our poor economy restricting its affordability. With our economy improving as a result of our reforms we can begin to change this."
+WHR_welfare_state_desc:0 "유럽의 많은 사람들이 비스마르크의 모범을 따르고 의료, 연금 및 저렴한 주택을 제공하는 복지국을 설립한 반면, 경제적 어려움으로 인해 경제성이 제한되어 있기 때문에 벨로루시는 제정 러시아 시대에 머물러 있습니다. 우리 경제가 개혁의 결과로 개선되면서 우리는 이것을 바꿀 수 있습니다."
 WHR_state_university:0 "벨로루시 국립 대학교"
-WHR_state_university_desc:0 "While we have at last begun to reform education, Belorussia still lacks a major university, forcing the more educated members of our population to study in other nations such as Germany to continue their education. By establishing our own university we can ensure that more future students will stay in Belorussia and aid our country's scientific research."
+WHR_state_university_desc:0 "우리는 마침내 교육을 개혁하기 시작했지만, 벨로루시는 여전히 주요 대학이 부족해서 교육받은 사람들이 독일과 같은 다른국가에서 공부하여 교육을 계속하도록 강요했습니다. 자체 대학을 설립함으로써 앞으로 더 많은 학생들이 벨로루시에 머무르며 우리나라의 과학연구를 지원할 수 있게 될 것입니다."
 WHR_crisis_ends:0 "벨로루시의 재탄생"
-WHR_crisis_ends_desc:0 "At the time of both independence and the beginning of the Black Monday crisis we were a poor, undeveloped nation, long exploited by Russia. Within just twenty years we have managed to modernise our economy and against all odds have produced a totally new country from the ashes!"
+WHR_crisis_ends_desc:0 "독립과 검은 월요일 위기 초기에 우리는 러시아의 오랜 착취에 의해 가난하고 발전되지 않은 국가였습니다. 우리는 불과 20년만에 경제를 현대화시켰고 온갖 역경에도 불구하고 완전히 새로운 국가를 만들었습니다."
 WHR_kingdom:0 "우리의 상황"
-WHR_kingdom_desc:0 "Belorussia at the current time is a very divided country. Opposing the current reign of the King Uladzimir are Sigismund and his odd alliance of pro-Russian and extreme Belarusian nationalist supporters. This ragtag group hope to overthrow Uladzimir as well as many of the nation's left-leaning founders, many of whom dream of a restoration of democracy or even outright Syndicalist revolution."
+WHR_kingdom_desc:0 "현재 벨로루시는 매우 분단된 국가입니다. 지그문트 그리고 친러시아와 벨라루시 민족주의자들의 이상한 동맹은 울라지미르 왕의 현재 통치에 반대하고 있습니다. 이 오합지졸이 모인 듯한 단체들은 울라지미르 뿐만 아니라 민주주의 회복을 꿈꾸는 많은 국가 좌익 성향의 창립자들 또는 철저한 생디칼리스트 혁명을 타도하기를 희망하고 있습니다."
 WHR_Waldemar:0 "울라지미르 왕"
-WHR_Waldemar_desc:0 "While the political system of Belorussia is constitutionally somewhat reliant on the firm grip of a strong absolutist monarchy, the current King Uladzimir prefers to leave the day-to-day governing to the current head of government. Vasil Zacharka, a Belarusian nationalist founder, and his party the right-wing BNP are in practical control of the nation."
+WHR_Waldemar_desc:0 "벨로루시의 정치체제는 어느 정도 강력한 절대주의 군주제를 확고히 장악하는데 의존하고 있지만, 현 울라지미르 왕은 일상적인 통치권을 현 정부 수반에게 맡기는 것을 선호합니다. 벨로루시 민족주의 창시자인 바실 자카르카와 그의 우파당 BNP 는 국가를 실질적으로 지배하고 있습니다."
 WHR_Sigismund:0 "지그문트 왕"
-WHR_Sigismund_desc:0 "For years since the death of Hienry the weak rule of his unworthy and wrongful successor Uladzimir has driven Belorussia into disrepair. But now that the rightful heir to the Belorussian throne, the former prince Sigismund, has reclaimed his birthright a new era shall begin for the country!"
+WHR_Sigismund_desc:0 "하인리히의 죽음 이후 수년 동안 그의 가치없고 그릇된 후계자 울라지미르는 벨로루시를 황폐화 시켰습니다. 그러나 이제 벨로루시의 왕위에 오른 지그문트 왕자는 자신의 장자권을 되찾았으며 새로운 시대를 시작할 것입니다!"
 WHR_democracy:0 "민주주의 재확립"
-WHR_democracy_desc:0 "It is clear that on account of his illness and disinterest in day-to-day rule Uladzimir is perhaps unfit to rule as an absolutist King. However instead of giving into Sigismund's demands, the answer clearly lies in reforming the nation into a constitutional monarchy and restoring at last the democracy of the original Belarusian republic."
+WHR_democracy_desc:0 "울라지미르 왕은 그의 병과 일상적인 통치에 대한 무관심으로 인해 아마도 절대주의자로서 통치하기에는 부적합한 것이 분명합니다. 그러나 지그문트의 요구를 들어주는 대신에, 그 대답은 분명히 국가를 입헌 군주제로 개혁하고 마침내 본래 벨로루시 공화국의 민주주의를 복원하는데 있습니다."
 WHR_unban_left:0 "생디칼리스트 문제"
-WHR_unban_left_desc:0 "Now that we have begun to step towards returning to democracy, we must decide if the Syndicalist parties should remain banned or not. While weak and lacking support, they could still constitute a significant threat if allowed to proliferate legally and stand in elections."
+WHR_unban_left_desc:0 "이제 우리는 민주주의로의 복귀를 향해 나아가기 시작했으므로 생디칼리즘 정당들이 금지된 상태로 남아 있어야 할지 말아야 할지를 결정해야 합니다. 약하고 지지는 부족한 반면, 법적으로 증식하고 선거에 출마할 수 있게 된다면 그들은 여전히 중요한 위협이 될 수 있습니다."
 WHR_liberalise_press:0 "언론 자유화"
-WHR_liberalise_press_desc:0 "In the past our press was carefully examined and anything criticising our regime or the German Empire censored. It is time to reform this so that newspapers and people of all opinions and politics may have a say."
+WHR_liberalise_press_desc:0 "과거에 우리의 언론은 면밀하게 조사되었고 우리의 체제나 독일 제국을 비난하는 것은 어떤 것이든 검열되었습니다. 모든 의견과 정치를 가진 신문과 국민이 발언권을 가질 수 있도록 이것을 개혁할 때입니다."
 WHR_disband_secret:0 "NBP 해산"
-WHR_disband_secret_desc:0 "While Uladzimir's popularity has begun to increase among the people following our reforms, Sigismund and his supporters in the NBP secret police remain a major threat to the new government. It is time to disband the secret police and arrest Sigismund himself if it comes to that."
+WHR_disband_secret_desc:0 "우리의 개혁에 따라 울라지미르의 인기는 증가하기 시작했지만, 지그문트와 NBP 비밀경찰의 그의 지지자들은 새 정부에 대한 주요한 위협으로 남아있습니다. 그것에 관한 비밀경찰을 해산하고 지그문트를 직접 체포할 때입니다."
 WHR_elections:0 "첫 선거 실시"
-WHR_elections_desc:0 "Now that all threats to our new democracy have been eliminated, it is time for Belorussia to finally hold its first ever elections."
+WHR_elections_desc:0 "우리의 새로운 민주주의에 대한 모든 위협이 제거되었기 때문에, 벨로루시는 마침내 첫 번째 선거를 치를 때입니다."
 WHR_authoritarian:0 "절대주의 증가"
-WHR_authoritarian_desc:0 "If Belorussia's problems stem from Uladzimir's lack of a firm rule, then it is clear what must be done!"
+WHR_authoritarian_desc:0 "만약 벨로루시의 문제가 울라지미르의 확고한 통치 결여에서 비롯되었다면, 어떻게 해야 할지는 분명합니다!"
 WHR_special_courts:0 "특별 법원 설립"
-WHR_special_courts_desc:0 "In spite of our best efforts syndicalists, pro-Russians and other enemies of the state still run rampant. It is clear that the NBP need to increase their operations, starting with secret trials of those whose opinions we deem unacceptable."
+WHR_special_courts_desc:0 "우리의 최선의 노력에도 불구하고, 친러시아인들과 다른 국가의 적들은 여전히 만연해 있습니다. 우리가 용납할 수 없다고 생각하는 사람들의 비밀 재판부터 시작해서, NBP 의 운영을 강화시킬 필요가 있다는 것은 명백합니다."
 WHR_censor_press:0 "언론 검열 확장"
-WHR_censor_press_desc:0 "Even with our current censorship, our enemies have still been able to secretly spread their ideals in many of the popular newspapers. We must begin to strictly dictate what content newspapers are to publish and ban those who refuse to conform."
+WHR_censor_press_desc:0 "우리의 현재 검열에도 불구하고, 우리의 적들은 여전히 많은 대중 신문에 그들의 이상을 몰래 퍼뜨릴 수 있었습니다. 우리는 엄격한 기준에 따라 신문의 내용을 공개하고 준수를 거부하는 사람들을 금지해야 합니다."
 WHR_sigismund_negotiations:0 "지그문트의 위치"
-WHR_sigismund_negotiations_desc:0 "Despite Uladzimir's recent show of strength his resentful brother Sigismund still claims himself the rightful king of Belorussia, and is amassing a number of supporters throughout all branches of government. This problem must be dealt with one way or another as soon as possible, as every more minute wasted gives Sigismund more time to plot."
+WHR_sigismund_negotiations_desc:0 "울라지미르가 최근 강세를 보이고 있음에도 불구하고, 그의 화난 형제 지그문트는 여전히 그가 벨로루시의 정당한 왕이라고 주장하며, 정부 각지에 걸쳐 많은 지지자들을 모으고 있습니다. 이 문제는 가능한 한 빨리 다뤄져야 합니다. 왜냐하면 매 분마다 지그문트가 줄거리를 짜는데 더 많은 시간을 주기 때문입니다."
 WHR_BPSR:0 "BPSR"
-WHR_BPSR_desc:0 "The BPSR, despite their long ban, has been able to use their legacy in having been one of the founding parties of the original Belarusian People's Republic to score a miracle victory! Who knows what lies next for Belorussia."
+WHR_BPSR_desc:0 "BPSR 은 오랜 금지에도 불구하고 그들의 유산을 벨로루시 인민 공화국의 창건당 중 하나로 사용하여 기적적인 승리를 거둘 수 있었습니다. 벨로루시 다음에 무엇이 있는지 누가 알겠습니까."
 WHR_revolution:0 "군주제를 짓밟다"
-WHR_revolution_desc:0 "Now that the true represenatives of the Belarusian people have gained power, it is time to finally send the tyrannical Hohenzollerns back where they belong!"
+WHR_revolution_desc:0 "이제 벨로루시 국민의 진정한 대표자들이 힘을 얻었으니, 마침내 폭군의 호헨촐레른을 다시 그들이 속한 곳으로 보내야 할 때입니다!"
 WHR_syndicalism:0 "생디칼리즘 혁명 지속"
-WHR_syndicalism_desc:0 "Now that we have finally become an independent republic once again, we must continue the Syndicalist revolution alongside the French and the British until all the workers of Europe have joined us in being free from Hohenzollern tyranny."
+WHR_syndicalism_desc:0 "이제 우리는 마침내 다시 한번 독립 공화국이 되었으니, 유럽의 모든 노동자들이 호엔촐레른 폭정으로부터 자유로워지기 전까지 프랑스, 영국 등과 함께 생디칼리즘 혁명을 계속해야 합니다."
 WHR_bolshevik:0 "볼셰비즘 수용"
-WHR_bolshevik_desc:0 "Despite the success of the syndicalist revolutions in the west, Bolshevism remains the true revolutionary ideology of eastern nations. We must embrace our roots, a belief which was cruelly crushed by the combined reactionary forces of Germany and White Russia."
+WHR_bolshevik_desc:0 "서방의 생디칼리스트 혁명 성공에도 불구하고, 볼셰비즘은 동방 국가의 진정한 혁명 이념으로 남아있습니다. 우리는 독일과 백러시아의 반동 세력에 의해 잔인하게 짓밟힌 우리의 뿌리와 믿음을 받아들여야 합니다."
 WHR_land_confiscation:0 "토지 분쟁"
-WHR_land_confiscation_desc:0 "The peasantry of Belarus have for a long time been under the thumb of the rich kulaks and the landlords. Many of these landlords are not even Belarusians at all but in fact are of Polish descent. The peasantry of Belarus must take back their land from these robbers of the people so that we can begin to establish agricultural collectives."
+WHR_land_confiscation_desc:0 "벨로루시의 농민들은 오래 동안 부유한 부농과 집주인의 손에 넘어갔습니다. 이 집주인들 대부분은 벨로루시인조차 전혀 아니며 실제로는 폴란드 출신입니다. 벨로루시의 농민들이 농민 집단을 설립하기 시작할 수 있도록 이들의 강도들로부터 토지를 회수해야 합니다."
 WHR_central_planning:0 "중앙 계획"
 WHR_central_planning_desc:0 "While some diehard syndicalists might accuse of being merely state capitalists, an economy dictated not by syndicates or free market but by the needs of the government is the most efficient system, as even the newfound Totalist movement admits."
 WHR_recreate_police:0 "비밀 경찰 재생성"
