--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -305,7 +305,7 @@ worldnews.69.a:0 "성 베드로 성당의 새 주인이 생겼군."
 worldnews.70.t:0 "이탈리아 선거"
 worldnews.70.d.sli:0 "이탈리아 공화국에서의 선거는 이바노에 보노미 수상이 그의 자리를 지켜내면서 끝이 났습니다. 검은 월요일 위기를 이유로 조기 선거를 실시한 그의 도박은 어느 정도 성공적이었습니다."
 worldnews.70.d.mli:0 "이탈리아 공화국에서의 선거는 이탈리아 자유당의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
-worldnews.70.d.sco:0 "이탈리아 공화국에서의 선거는 이탈리아 대중당의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
+worldnews.70.d.sco:0 "이탈리아 공화국에서의 선거는 이탈리아 민중당의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
 worldnews.70.d.npo:0 "이탈리아 공화국에서의 선거는 이탈리아 민족주의 연맹의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 수상으로 임명된 즉시 본인의 칭호를 자칭 이탈리아의 지도자로서 가장 적합한 칭호라고 주장하는 일-두체로 바꾸었고, 밀라노에서의 연설에서 그는 그 무엇도 이탈리아의 위대함을 가로막을 수 없으며, 현재 이탈리아를 잠식하고 있는 검은 월요일 위기는 새로운 이탈리아의 군홧발에 곧 짓밟힐 오스트리아의 사악한 영향 때문이라고 주장했습니다."
 worldnews.70.a:0 "흥미롭군."
 
