--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -24,8 +24,8 @@ HOL_nas_majority:0 "전국노동사무국의 선거 우세"
 HOL_rsap_majority:0 "혁명사회노동당의 선거 우세"
 hol_sdap_majority:0 "사회민주노동당의 선거 우세"
 hol_leftwing_negotiations_failed:0 "좌익들과의 협상이 실패하다"
-hol_gele_kerken:0 "반 힐케르켄의 쿠데타가 성공하다"
-hol_geen_gele_kerken:0 "반 힐케르켄의 쿠데타가 실패하다"
+hol_gele_kerken:0 "반 힐케어컨의 쿠데타가 성공하다"
+hol_geen_gele_kerken:0 "반 힐케어컨의 쿠데타가 실패하다"
 
 ### Ideas ###
 HOL_mech_troops:0 "기계화 보병"
@@ -190,12 +190,12 @@ HOL_syndicalist_focus:0 "좌익 네덜란드"
 
 ### Focuses ###
 HOL_left_list_victorious:0 "좌파의 승리"
-HOL_left_list_victorious_desc:0 "The moderate left of Dutch politics has won the recent elections, granting them the initiative and political capital needed to form a new government."
+HOL_left_list_victorious_desc:0 "네덜란드의 정치계의 중도좌파가 이번 선거에서 승리하였으며, 새로운 정부를 구성하는데 필요한 정치적 권한이 그들에게 주어졌습니다."
 HOL_SDAP_RSAP:0 "사회민주노동당-혁명사회노동당 연립"
 HOL_SDAP_RSAP_desc:0 "The more centrist social democrats have formed a coalition with the radical socialists in order to be able to put their views into effect in full."
 HOL_VDB_SDAP:0 "자유민주연맹-사회민주노동당 연립"
 HOL_VDB_SDAP_desc:0 "The social democrats must work with their partners in the Lijst Links electoral alliance if they are to set up the first Dutch centre-left government."
-HOL_overthrow_the_system:0 "체제를 전복시켜라!"
+HOL_overthrow_the_system:0 "체제를 뒤집어라!"
 HOL_overthrow_the_system_desc:0 "The parliamentary system of the Netherlands is obsolete! Let us abolish the current system in favour of a more radical solution."
 HOL_use_popular_mandate:0 "국민의 신임"
 HOL_use_popular_mandate_desc:0 "The people have given us their trust to repair the nation. With them having been granted their wish, we should work within the system to reform it."
@@ -251,18 +251,18 @@ HOL_twinkling_social_democracy:0 "사회민주주의의 빛"
 HOL_twinkling_social_democracy_desc:0 "Our policies have made the Netherlands a beacon in the world, and an example for all on how to build a proper welfare state."
 HOL_entice_christian_progressives:0 "기독교 세력의 진보 조장"
 HOL_entice_christian_progressives_desc:0 "Many Christian progressives vote for the conservatives simply because they are Christian. Part of the Doorbraak policy will be incentivising them to actually vote for the left-wing parties that they secretly admire."
-HOL_the_united_state:0 "합중국"
-HOL_the_united_state_desc:0 "We ought to show unity at all times. Let us stand united as Dutchmen versus the world."
+HOL_the_united_state:0 "단결된 국가"
+HOL_the_united_state_desc:0 "우리는 언제나 굳건히 단결해 있어야만 합니다. 하나된 네덜란드인으로서 세계 무대에 섭시다."
 HOL_foreign_policy:0 "네덜란드 외교 정책"
-HOL_foreign_policy_desc:0 "Now that we have stabilised our political order, it is time to look outwards again and examine whether we should re-emphasise our self-imposed neutrality or find allies in this new hostile world."
+HOL_foreign_policy_desc:0 "드디어 우리의 정치적 안정을 찾았으니, 이제 다시 바깥을 내다보고 전통적으로 우리가 지켜온 중립성을 다시 강조해야 할 지, 아니면 이 새롭고 살벌한 세계에서 동맹을 찾아야 할 지를 검토해야 할 시점입니다."
 HOL_join_mitteleuropa:0 "제국 조약에 가입"
-HOL_join_mitteleuropa_desc:0 "Ever since the Boer War, we have been drifting towards the German cause, and if the Reichspakt falls to the godless syndicalists then we are likely finished as well. Let us fight for our own fate instead of having it forced upon us!"
+HOL_join_mitteleuropa_desc:0 "보어 전쟁 이후부터 계속 우리는 독일과 영향을 주고받아 왔으며, 만약 제국 조약이 생디칼리디스트들에게 무너진다면 우리 역시 끝장입니다. 우리에게 강요될 운명을 따를 바에야 우리 자신의 운명을 위해 싸웁시다!"
 HOL_sustain_neutrality:0 "중립국 선언"
-HOL_sustain_neutrality_desc:0 "The Netherlands suffers from enough troubles without joining a devastating global conflict. We shall work with whomever reigns supreme after the conflict, as we have done many times before."
+HOL_sustain_neutrality_desc:0 "ting global conflict. We shall work with whomever reigns supreme after the conflict, as we have done many times before."
 HOL_join_entente:0 "협상국에 가입"
-HOL_join_entente_desc:0 "The Entente long seemed an unlikely choice for an alliance. The British struggle in South Africa ensured a negative view of the United Kingdom permeated throughout all layers of Dutch society. The world turns, however, and changing geopolitics means our stance must shift."
+HOL_join_entente_desc:0 "협상국은 동맹에 대한 논의 과정에서 배제된 것처럼 보였습니다. 남아프리카에서의 영국인들의 만행은 네덜란드 사회의 모든 계층에 스며든 영국인들에 대한 부정적인 선입견을 더욱 강화시켰습니다. 그러나 세계는 급변하고, 지정학적 변화는 우리의 입장을 바꾸어야 한다는 것을 의미합니다."
 HOL_join_internationale:0 "인터내셔널에 가입"
-HOL_join_internationale_desc:0 "The revolution came to the Netherlands and has been entrenched. Thus the time has come for us to join the Internationale and help export the Revolution, aiding in the liberation the working class beyond merely our own tiny country."
+HOL_join_internationale_desc:0 "혁명의 물결이 네덜란드로 넘어와 이제 완전히 자리를 잡았습니다. 이제는 우리가 인터내셔널에 참여하여 혁명의 전파를 도울 때이며, 작디작은 우리 나라를 넘어 모든 프롤레타리아들을 해방시켜야 합니다."
 HOL_relations_south_africa:0 "남아프리카 문제"
 HOL_relations_south_africa_desc:0 "South Africa is populated by a number of Dutch-descent Boers, making its political fate in this troubled times particularly concerning to our own domestic political scene. There have been a number of calls from all sides of the left-right spectrum to consider our approach."
 HOL_aftermath_black_monday:0 "검은 월요일의 여파"
@@ -408,7 +408,7 @@ HOL_european_centroamerica_desc:0 "There are some in our government advocating c
 HOL_finish_national_assembly:0 "Finish the National Assembly"
 HOL_finish_national_assembly_desc:0 "With a number of substantial reforms instigated and proposals outlined, the Assembly now appears to be drawing to a relative close, its primary purpose served. It has been invaluable in drawing our new socio-political system together and so its legacy will live on."
 HOL_reijnders_putsch:0 "레인데어스의 정부 전복"
-HOL_reijnders_putsch_desc:0 "In an absolutely shocking turn of events, the head of the Dutch army, Izaak Reijnders launched a military coup d'etat in Amsterdam, stating that the nation was in danger of falling to dangerous syndicalist subversives. Holland's destiny is, for now, uncertain."
+HOL_reijnders_putsch_desc:0 "네덜란드군 사령관인 이자크 레인데어스가 암스테르담에서, 국가가 위험한 생디칼리즘적 전복에 빠져버릴 위험에 처해 있다며 군사 쿠데타를 시작하는 충격적인 사태가 벌어졌습니다. 네덜란드의 운명은, 현재로서는... 불확실하군요."
 HOL_VNH_victory:0 "국가재건연합 선거 승리"
 HOL_VNH_victory_desc:0 "국가재건연합은 최근의 선거에서 놀랄만한 승리를 거두면서 보수적인 기독국민동맹을 대체하고 이 나라를 불확실하게 만들었습니다. 새 정부가 할 일은 아직 확실하지 않습니다."
 HOL_CNA_gamble_worked:0 "기독국민동맹's Gamble Pays Off"
@@ -424,7 +424,7 @@ HOL_CNA_on_its_own_desc:0 "We do not need any other. Holland has only one guidin
 HOL_work_with_LSP:0 "자유국가당과 함께 한다"
 HOL_work_with_LSP_desc:0 "If we have to work with others, then we could do no worse than the market liberal 자유국가당. While our beliefs are primarily social, theirs tend to stress economic concerns. It is a compromise that does not pose too many problems, at least in comparison to our other 'choices'."
 HOL_martial_law_in_europe:0 "계엄령 선포"
-HOL_martial_law_in_europe_desc:0 "If we are to safeguard the new regime then it is imperative that we begin crackdowns immediately, and demonstrate our resolve to solve the nation's political crisis. By declaring martial law in Europe we will be able to make clear our determination to save Holland from itself."
+HOL_martial_law_in_europe_desc:0 "우리의 새 정권을 보호하기 위해서는, 즉시 단속을 시작하고 국가의 정치적 위기를 해결하기 위한 우리의 의지를 보여주는 것이 시급합니다. 유럽에서의 계엄령을 선포함으로써 우리는 네덜란드를 위험으로부터 구하려는 우리의 결의를 분명히 할 수 있을 것입니다."
 HOL_rebuild_binnenhof:0 "빈넨호프 재건"
 HOL_rebuild_binnenhof_desc:0 "The Binnenhof is a near-sacred institution in the Netherlands, and the arson that destroyed it to many represents a clear symbol of the decay of our state and its slide into political madness. By rebuilding it we might send a widespread signal of what we hope to achieve for the future."
 HOL_red_scare:0 "적색 공포"
@@ -463,7 +463,7 @@ HOL_idea_convention_host:0 "국제 회의 주최"
 HOL_idea_convention_host_desc:0 "This country is renowned for hosting multiple international conventions, making it harder for potential invaders to justify their attack."
 HOL_batavian_committee_of_science:0 "바타비아 과학 위원회"
 HOL_batavian_committee_of_science_desc:0 "By nationalising the assets of research companies and placing them under the oversight of one committee by, for and with the people, we will be able to conduct research far more efficiently."
-HOL_dutch_researching:0 "네덜란드의 연구소"
+HOL_dutch_researching:0 "네덜란드 연구소"
 HOL_dutch_researching_desc:0 "With Flanders in friendly hands, we can combine our research and share it faster with local scientists using the Dutch language. This will be a great boon to our research capabilities."
 HOL_royalist_sentiment_transferred:0 "Exploit Royalist Sentiment"
 HOL_royalist_sentiment_transferred_desc:0 "With the Queen's backing, our junta has been given the modicum of legitimacy that it needed to bring a number of undecided moderates over to our way of thinking. Now increasingly viewed as the saviours of a troubled nation, our position is becoming far safer."
@@ -479,10 +479,10 @@ HOL_zonderlinge_zaterdag:0 "별난 토요일"
 HOL_zonderlinge_zaterdag_desc:0 "국가재건연합의 개혁은 지금까지 효과가 있었고, 국가는 어느 정도 정치적으로 그리고 경제적으로 회복되고 있습니다. 그럼에도 불구하고, '별난 토요일' 사건은 안정에 대한 이전의 모든 개념을 종식시킬 수도 있습니다."
 HOL_staatsvakbond:0 "국립 노조"
 HOL_staatsvakbond_desc:0 "The Dutch people have a newfound sense of pride, however with the loss of traditional pillars and outlets such as the unions, their anger and zeal might be directed our way. By instituting new state-led trade unions, we can diffuse and disarm these feelings, and potentially redirect them towards our enemies."
-HOL_van_geelkerkens_arrest:0 "반 힐케르켄의 체포"
-HOL_van_geelkerkens_arrest_desc:0 "반 힐케르켄이 스와르트를 강제 퇴진시키려는 시도에 실패한 바로 지금, 우리는 가능한 한 많은 정치적 영향력을 확보해두는 것이 중요합니다. 강경파의 쿠데타 야망을 무너뜨림으로써, 우리의 중도주의적 이미지는 더욱 강해지고 우리의 인기는 새로운 절정에 다다를 것입니다."
+HOL_van_geelkerkens_arrest:0 "반 힐케어컨의 체포"
+HOL_van_geelkerkens_arrest_desc:0 "반 힐케어컨이 스와르트를 강제 퇴진시키려는 시도에 실패한 바로 지금, 우리는 가능한 한 많은 정치적 영향력을 확보해두는 것이 중요합니다. 강경파의 쿠데타 야망을 무너뜨림으로써, 우리의 중도주의적 이미지는 더욱 강해지고 우리의 인기는 새로운 절정에 다다를 것입니다."
 HOL_swarts_retirement:0 "스와르트의 퇴진"
-HOL_swarts_retirement_desc:0 "반 힐케르켄은 성공적으로 스와르트를 대통령직에서 물러나게 했으며 네덜란드에 훨씬 더 극단적인 사상과 성향을 주입했습니다. 특히 몇몇 국가재건연합 충성파들의 불명예스러운 비밀이 줄줄이 누설된 지금의 상황에서, 새로운 정국의 혼란은 놀라울 정도로 잘 진정되었다고 할 수 있겠습니다."
+HOL_swarts_retirement_desc:0 "반 힐케어컨은 성공적으로 스와르트를 대통령직에서 강제 퇴진시켰고, 네덜란드에 훨씬 더 극단적인 사상과 성향을 주입했습니다. 특히 몇몇 국가재건연합 충성파들의 불명예스러운 비밀이 줄줄이 누설된 지금의 상황에서, 새로운 정국의 혼란은 놀라울 정도로 잘 진정되었다고 할 수 있겠습니다."
 HOL_reform_landwacht:0 "란트바흐트 개혁"
 HOL_reform_landwacht_desc:0 "The Landwacht has been incredibly effective in securing and defending our government. Unfortunately it has a number of unsavoury elements within it that have cast a poor light on the rest of the paramilitary force as well as our own government. Things must change."
 HOL_landwacht_part_of_army:0 "란트바흐트를 육군에 통합"
@@ -510,7 +510,7 @@ HOL_ban_RSAP_desc:0 "While the radical socialists are not quite as dangerous as 
 HOL_ban_patriotten:0 "애국당 금지"
 HOL_ban_patriotten_desc:0 "The Patriotten are a virulent disease, the likes of which the Netherlands hasn't seen for many years. It is so hard-left that it poses as much as threat to other syndicalist ideologies as our own. Self-destructive impulses aside, we must suppress such groups."
 HOL_ban_VNH:0 "국가재건연합 금지"
-HOL_ban_VNH_desc:0 "좌익 세력을 지하로 몰아내면서, 극우파의 위협을 완전히 무너뜨리는 것이 점점 더 중요해지고 있습니다. 그렇지 않으면 국가재건연합의 더 극단적인 요소는 입맛에 맞는 단체를 국가의 잠재적 위험으로 만들 것이고, 그렇기 때문에 국가재건연합은 법을 통해 무너져야 합니다."
+HOL_ban_VNH_desc:0 "좌익 세력을 지하로 몰아내면서, 극우파의 위협을 완전히 무너뜨리는 것이 점점 더 중요해지고 있습니다. 국가재건연합의 더 극단적인 요소는 입맛에 맞는 단체를 국가의 잠재적 위험으로 만들 것이고, 그렇기 때문에 국가재건연합은 법을 통해 무너져야 합니다."
 HOL_razzia_for_undergrounds:0 "지하조직 습격 시작"
 HOL_razzia_for_undergrounds_desc:0 "With many extremist groups forced underground, that leaves them with only one remaining place for us to target. We will launch a major police operation and bring down the remnants of these hateful groups, no matter the cost."
 HOL_stable_once_again:0 "안정을 되찾자!"
@@ -615,8 +615,8 @@ HOL_claa_furstner:0 "대공 경순양함"
 HOL_claa_furstner_desc:0 "We need ships to shoot enemy planes out of the skies to protect our fleet. A cruiser sized design is perfect for that. We can specialise our future cruiser designs to have less guns pointing at the sea, and more into the skies!"
 HOL_carrier_tactics:0 "항공모함 전술"
 HOL_carrier_tactics_desc:0 "We have a carrier force, but never properly studied how to use them effectively. We should remedy this at once."
-HOL_fleet_carrier:0 "하우덴 레우"
-HOL_fleet_carrier_desc:0 "HrMs 하우덴 레우는 명백히 우리 해군의 자부심입니다. 이 함선 단독으로도 우리의 해군력은 크게 향상되었지만, 다른 해군들은 그녀보다 더 크고, 더 많은 항공모함을 보유하고 있습니다. 우린 이 함선을 극한까지 개조해 격납고에 더 많은 비행기를 탑재시킬 수 있고, 아니면 새 함재기를 탑재해 볼 수도 있습니다!"
+HOL_fleet_carrier:0 "하우던 리우"
+HOL_fleet_carrier_desc:0 "항공모함, HrMs 하우던 리우는 명백히 우리 해군의 자부심입니다. 이 함선 단독으로도 우리의 해군력은 크게 향상되었지만, 다른 해군들은 그녀보다 더 크고, 더 많은 항공모함을 보유하고 있습니다. 우린 이 함선을 극한까지 개조해 격납고에 더 많은 비행기를 탑재시킬 수 있고, 아니면 새 함재기를 탑재해 볼 수도 있습니다!"
 HOL_light_carrier:0 "새로운 경항공모함"
 HOL_light_carrier_desc:0 ""
 
