--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -2151,30 +2151,30 @@ holfocus.72.b:0 "We don't need them"
 
 holfocus.73.t:0 "코뮌이 우리의 요청을 받아들이다"
 holfocus.73.d:0 "The French have accepted our request to join the Internationale."
-holfocus.73.a:0 "Great!"
+holfocus.73.a:0 "훌륭하군!"
 
 holfocus.74.t:0 "코뮌이 우리의 요청을 받아들이지 않다"
 holfocus.74.d:0 "The French have declined our request to join the Internationale, saying that we wouldn't be able to help. This is an insult."
-holfocus.74.a:0 "Great!"
+holfocus.74.a:0 "참 훌륭하셔라!"
 
-holfcous.75.t:0 "Help the Netherlands"
+holfcous.75.t:0 "네덜란드에 대한 도움"
 holfocus.75.d:0 "The Japanese are attacking [HOL.GetNameDef] in hopes of taking their colony in Indonesia. There is some fear among the Australasian general staff however that if the Japanese are allowed to take over the area they will use it as a staging ground to invade Australia: they are calling upon us to approach the Dutch for an alliance before the fight inevitably reaches Sydney or Melbourne."
 holfocus.75.a:0 "Approach the Dutch authorities."
 holfocus.75.b:0 "No, the Japanese will surely leave us alone."
 
 holfocus.76.t:0 "오스트랄라시아가 동맹을 제안하다"
 holfocus.76.d:0 "Australasia proposes that we join the Entente and that they in turn will help us in our struggle against the Japanese. What do we say?"
-holfocus.76.a:0 "We're in!"
-holfocus.76.b:0 "Don't worry, we can handle this alone!"
+holfocus.76.a:0 "우린 합류한다!"
+holfocus.76.b:0 "걱정 마라, 우리는 혼자서 해결할 수 있으니!"
 
 holfocus.77.t:0 "오스트랄라시아가 네덜란드와 협상하다"
 holfocus.77.d:0 "Australasia has let us know that they intend to negotiate with the Dutch to have them join the Entente as they suspect that the Japanese will come for them after they conquer the Indonesian archipelago and prefer to have the fight be there instead of in Australia and New Zealand themselves. We can still refuse them if we do not want to be pulled into a war with Japan, though the European Netherlands could in the future also prove a good staging ground against the Kaiserreich."
-holfocus.77.a:0 "A good initiative."
-holfocus.77.b:0 "We do not want war with Japan."
+holfocus.77.a:0 "좋은 계획이다."
+holfocus.77.b:0 "우리는 일본과 전쟁하고 싶지 않은데."
 
 holfocus.78.t:0 "네덜란드가 협상국에 가입하다"
 holfocus.78.d:0 "The Netherlands has agreed to our plan and has joined the Entente. It is time to mobilise the Australian people in defence of our nation!"
-holfocus.78.a:0 "Okay then!"
+holfocus.78.a:0 "그렇다면 좋다!"
 
 holfocus.79.t:0 "Canada Disapproves"
 holfocus.79.d:0 "The Canadians have let us know that they do not wish us to join the war against the Japanese in South East Asia."
@@ -2182,29 +2182,29 @@ holfocus.79.a:0 "Then we will pull back."
 
 holfocus.80.t:0 "네덜란드가 카이저 빌헬름 학회에 합류하기를 원하다"
 holfocus.80.d:0 "The Dutch have expressed their desire to join the Kaiser Wilhelm research programme. It could provide a boon to our joint technological progress... or alternatively result in the syndicalists overrunning them and ending up with our technology."
-holfocus.80.a:0 "Welcome them."
-holfocus.80.b:0 "Thanks but no thanks."
+holfocus.80.a:0 "환영한다."
+holfocus.80.b:0 "고맙지만 사양한다."
 
 holfocus.81.t:0 "독일이 네덜란드의 카이저 빌헬름 학회 합류를 허락하다"
 holfocus.81.d:0 "The Germans have accepted our request for admission in the Kaiser Wilhelm Society. This will be a great boon for our research and development."
-holfocus.81.a:0 "Good."
+holfocus.81.a:0 "좋아."
 
 holfocus.82.t:0 "독일이 네덜란드의 카이저 빌헬름 학회 합류를 거부하다"
 holfocus.82.d:0 "The Germans have waived our request for admission into the Kaiser Wilhelm Society research program, saying that we are too weak and that they are afraid syndicalists will overrun us and thus get their technology."
-holfocus.82.a:0 "Oh ye of little faith."
+holfocus.82.a:0 "믿음이 부족한 자로군."
 
 holfocus.83.t:0 "네덜란드가 ISAC에 합류하기를 원하다"
 holfocus.83.d:0 "The Dutch have expressed their desire to join the ISAC research program. It could provide a boon to our joint technological progress... or alternatively result in the enemy overrunning them and ending up with our technology."
-holfocus.83.a:0 "Welcome them."
-holfocus.83.b:0 "Thanks but no thanks."
+holfocus.83.a:0 "환영한다."
+holfocus.83.b:0 "고맙지만 사양한다."
 
 holfocus.84.t:0 "캐나다가 네덜란드의 ISAC 합류를 허락하다"
 holfocus.84.d:0 "The Canadians have accepted our request for admission in the ISAC research program. This will be a great boon for our research and development."
-holfocus.84.a:0 "Good."
+holfocus.84.a:0 "좋아."
 
 holfocus.85.t:0 "캐나다가 네덜란드의 ISAC 합류를 거부하다"
 holfocus.85.d:0 "The Canadians have waived our request for admission into the ISAC research program, saying that we are too weak and that they are afraid the enemy will overrun us and thus get their technology."
-holfocus.85.a:0 "That's rich."
+holfocus.85.a:0 "재미있군."
 
 holfocus.86.t:0 "Policy on Belgium"
 holfocus.86.d:0 "Now that we have stabilised the country and can look outwards again, we have to evaluate our policy towards the southern part of the Lowlands. Some people say that it is best for both sides if we maintain friendly relations with the rulers of Belgium. There is however, especially on the far-right, also a lobby that demands we stake our claims on Flanders, where most people speak Dutch too and which should, by that logic, be part of the Dutch state."
@@ -2230,13 +2230,13 @@ holfocus.90.a:0 "[Root.GetNameDef] never forgets!"
 
 holfocus.91.t:0 "남아프리카 문제"
 holfocus.91.d:0 "Throughout the 19th and early 20th centuries, the Dutch government lended a helping, if subtle, hand to the descendants of Dutch colonists in South Africa, boosted by a strong public opinion in the Netherlands in favour of the former. At the turn of the 20th century, however, this sentiment started to change, perhaps under influence of the 'apartheid' concept. The question is whether we should continue supporting the Boers or whether we should support the Dominionist side instead, who have the moral high ground and are in fact also represented by descendants of Dutch colonists such as Smuts and Hofmeyr."
-holfocus.91.a:0 "Continue our support for the Boers."
-holfocus.91.b:0 "We shall support democracy in South Africa henceforth."
+holfocus.91.a:0 "보어인들에 대한 지원을 계속하라."
+holfocus.91.b:0 "우리는 남아프리카의 민주주의를 지원해야 한다."
 
 holfocus.92.t:0 "[HOL.GetNameDefCap]이(가) 연구 프로그램에 합류하기를 원하다."
 holfocus.92.d:0 "[HOL.GetNameDefCap] has suggested the idea of a new joint-research programme, in the hopes that sharing our scientific findings will be mutually beneficial and help us improve relations."
-holfocus.92.a:0 "Sounds like a plan."
-holfocus.92.b:0 "Thanks but no thanks!"
+holfocus.92.a:0 "좋아 보이는데."
+holfocus.92.b:0 "고맙지만 사양한다!"
 
 holfocus.93.t:0 "[From.GetNameDefCap]이(가) 허락하다!"
 holfocus.93.d:0 "We have received an answer from [From.GetNameDef]! They accepted our proposal to start a joint research programme and it is going into effect as we speak."
@@ -2252,7 +2252,7 @@ holfocus.95.a:0 "A commune of councils it will be!"
 
 holfocus.101.t:0 "사회주의자들이 정부를 해산시키다."
 holfocus.101.d:0 "Following their successful takeover in the recent elections, the socialists have declared that the old government is gone and that new one shall be built upon the old."
-holfocus.101.a:0 "Long live the worker!"
+holfocus.101.a:0 "노동자 만세!"
 
 ### Dutch navy focuses events
 
@@ -2308,13 +2308,13 @@ holnavy.8.b:0 "We need a proper flagship, contact German shipwharves for a prope
 holnavy.8.b.tt:0 "We should hear back from them in a few weeks with preliminary designs."
 holnavy.8.c:0 "This is too expensive right now!"
 holnavy.8.c.tt:0 "We shall attempt to come up with our own design..."
-holnavy.9.t:0 "A New Carrier?"
+holnavy.9.t:0 "새로운 항공모함?"
 holnavy.9.d:0 "We currently possess one carrier, the HrMs Gouden Leeuw. Although this is no match for any of the major naval powers, she is an important asset of our fleet. We can attempt to bolster her efficiency by making more space the hangars.\n\nContacting German shipyards if they are willing to design one for us is also an opportunity. So we can augment her with a sister ship and greatly improving our naval aviation capabilities.\n\nOr we'll design our own by carefully studying the HrMs Gouden Leeuw, but that might take a while."
-holnavy.9.a:0 "Upgrade the Gouden Leeuw."
+holnavy.9.a:0 "하우덴 리우를 개장하라."
 holnavy.9.a.tt:0 "§YGrants an upgraded variant of the HrMs Gouden Leeuw, making room for 8 more planes.\nUnlocks a decision to upgrade the ship.§!\n\n"
-holnavy.9.b:0 "Send requests to German shipbuilders to make a new design."
+holnavy.9.b:0 "독일 조선사에 새 설계를 의뢰하라."
 holnavy.9.b.tt:0 "We should hear back from them in a few weeks with preliminary designs."
-holnavy.9.c:0 "We will design our own!"
+holnavy.9.c:0 "우리가 새 설계를 만든다!"
 holnavy.9.c.tt:0 "We shall attempt to come up with our own design..."
 holnavy.15.t:0 "Destroyer Escorts Design"
 holnavy.15.d:0 "Effective screen ships are important to protect our vulnerable ships from both the dangers from the skies and lurking under the sea. The Dutch navy has a sizeable amount of destroyers but they are reaching a venerable age. New modern destroyer plans are in progress, however we can opt to alter our designs to improve their combat effectiveness at some additional cost per ship."
@@ -2347,8 +2347,8 @@ holfocus.401.dxxi-5.t:0 "포커 D.XXI-5가 개발되다"
 holfocus.401.dxxi-5.d:0 "With the Fokker D.XXI steadily replacing the antiqudated biplanes in service of the LVA, concerns have been raised about the relatively low engine power as well as drag created by the non retractable landing gear. Although the plane is well liked by its pilots, it does have some room for improvement.\n\nSeveral design changes have been proposed, and one redesigned model with an upgraded engine and retractable landing gear is now ready for production.\nThis will provide a cheap boost to the combat worthyness of the Luchtvaartafdeling, as exisiting production lines can be used."
 holfocus.401.dxxiii.t:0 "포커 D.XXIII가 개발되다"
 holfocus.401.dxxiii.d:0 "The Fokker D.XXI planes are serving us well, but their limited engine power means their obsoledence is nearing quickly. Fortunally, Fokker has been designing a replacement in the form of the twin engined D.XXIII. With two engines instead of one and thus double the horsepower, our pilots should definitely get the advantage of enemey designs.\n\nThe Fokker D.XXIII is to be equipped with two 7.92mm calibre machineguns along with two 13mm guns, more then doubling the firepower of the previous designs."
-holfocus.401.a:0 "Lets build them!"
-holfocus.401.b:0 "Lets build them!"
+holfocus.401.a:0 "생산하라!"
+holfocus.401.b:0 "생산하라!"
 holfocus.402.t:0 "LVA에서 쓸 새 폭격기"
 holfocus.402.d:0 "Now we have developed new fighters, we thus are able to protect any new bombers we build. Fokker has presented us with design plans for both, however we lack the funds to build both designs in a significant number. Hence, We should make a choice between shorter range but more accurate dive bombers, or larger twin engined bombers."
 holfocus.402.a:0 "Small nimble dive bombers is what we need."
@@ -2357,20 +2357,20 @@ holfocus.402.b:0 "Tactical Bombers will make a nice addition to the LVA."
 ### Tasteful flavor ###
 holflavor.1.t:0 "중앙 유럽 표준시로 전환?"
 holflavor.1.d:0 "세계대전이 끝난 이후 네덜란드에 한가지 제안이 들어왔는데, 그것은 현재 사용중인 그리니치 평균시에서 중앙 유럽 표준시로 옮겨가야 한다는 것이었습니다.\n\n하지만 영국 혁명 이후로, 이러한 요구는 점점 더 거세졌고, 이 시간대에 우리의 무역 상대국은 없게 되었습니다. 네덜란드는 브리튼과 프랑스의 생디칼리즘 정권을 아직 외교적으로 인정하지 않고 있으며, 플랑드르-왈로니아는 독일의 압력으로 이미 중앙 유럽 표준시로 옮겨갔습니다.\n\n이 논쟁은 네덜란드가 암스테르담의 자연적인 시간대를 따라야 한다는 쪽과 네덜란드가 카이저라이히 - 결국 가장 중요한 무역 파트너이다 - 의 시간대로 옮겨가야 한다는 쪽 사이로 급속하게 퍼지면서 1930년대 동안 조용히 진행되었습니다. 마침내 후자를 지지한다는 합의가 1935년에 이루어진 후, 1936년 2월 첫째날부터 국가의 시간대를 늦춰 제국 조약과 동일시하는 최종 결정이 우리 손에 달렸습니다."
-holflavor.1.a:0 "가자!"
+holflavor.1.a:0 "그렇게 하라!"
 holflavor.1.b:0 "그리니치 평균시가 더 익숙하니 취소하라!"
 
-holflavor.2.t:0 "Opening of the Waalbrug"
+holflavor.2.t:0 "발 다리의 개통"
 holflavor.2.d:0 "The ferry over the Waal river was one of the Netherlands' busiest ferries. Recognising its limited capacity, the municipal authorities of Nijmegen started the construction of the Waalbrug in 1931. On the 16th of June 1936 the finished bridge has finally been officially opened by Her Majesty the Queen."
-holflavor.2.a:0 "Hurrah!"
+holflavor.2.a:0 "만세!"
 
 holflavor.3.t:0 "율리아나 공주가 결혼을 발표하다!"
 holflavor.3.d:0 "It has been observed that Crown Princess Juliana had been seeing Prince Bernhard zur Lippe-Biesterfeld, whom she had met at the Winter Olympics earlier this year, but the announcement of her engagement with him over radio still took the nation by surprise. Despite the hardships the people are enduring in these trying times due to the effects of the Black Monday Crisis, this comes as a welcome cheer and joy is evident throughout the country."
-holflavor.3.a:0 "How sweet!"
+holflavor.3.a:0 "로맨틱하군!"
 
 holflavor.4.t:0 "율리아나 공주의 결혼"
 holflavor.4.d:0 "Today Crown Princess Juliana is marrying her fiancé the Prince Bernhard zur Lippe-Biesterfeld, who renamed himself to 'van Lippe-Biesterfeld' in Dutch style. The announcement alone had provoked a wave of happiness throughout crisis-ridden Netherlands and the ceremony certainly will do no less. The national feast will be sure to distract a bit from the current bad economic circumstances and forms a spot of hope for those in despair at the state of the country!"
-holflavor.4.a:0 "Congratulations, Juliana!"
+holflavor.4.a:0 "축하합니다, 율리아나!"
 
 holflavor.5.t:0 "네덜란드에서의 부분 일식"
 holflavor.5.d:0 "예상했던 대로 오늘 네덜란드에서 일식이 일어났습니다. 시민들과 과학자들은 달이 태양을 부분적으로 가리는 것을 보기 위해 밖으로 나왔으며, 심지어는 일식을 더 잘 보기 위해 프랑스 인접 지역으로 간 사람도 있었습니다."
@@ -2387,7 +2387,7 @@ holflavor.7.d:0 "The first Dutch Großer Preis, or Grand Prix, has been held on 
 holflavor.7.a:0 "One day we will build it!"
 
 holflavor.8.t:0 "벨루어 경매"
-holflavor.8.d:0 "현재의 끔찍한 경제 위기에서, 크뢸러-뮐러 귀족 가문은 벨루어에서 사냥을 계속할 여유가 없습니다. 그들은 만일 안톤 크륄러가 사나운 곰, 사슴 등을 풀어 놓은 이 땅을 홀란드 지역의 첫 국립공원으로 만들어 방문객을 맞이 한다면, 정부가 지원하는 재단에 땅을 팔겠다고 제안했습니다.\n\n유일한 쟁점은 그들이 그 지역에 있는  저택에서 계속 살아도 되는가 하는 문제입니다. 뮐러 부인은 계획이 실행된다면 박물관을 설립하겠다고 밝혔습니다."
+holflavor.8.d:0 "현재의 끔찍한 경제 위기에서, 크뢸러-뮐러 귀족 가문은 벨루어에서 사냥을 계속할 여유가 없습니다. 그들은 만일 안톤 크륄러가 사나운 곰, 사슴 등을 풀어놓은 이 땅을 홀란트 지역의 첫 국립공원으로 만들어 방문객을 맞이한다면, 정부가 지원하는 재단에 땅을 팔겠다고 제안했습니다.\n\n유일한 쟁점은 그들이 그 지역에 있는 저택에서 계속 거주해도 되는가 하는 문제입니다. 뮐러 부인은 계획이 실행된다면 박물관을 설립하겠다고 밝혔습니다."
 holflavor.8.a:0 "재단을 지원하여 땅을 구매하라."
 holflavor.8.b:0 "대신 그 땅은 독일 귀족에게 팔렸다."
 
@@ -2397,7 +2397,7 @@ holflavor.9.a:0 "Requiescat in Pace."
 
 holflavor.10.t:0 "베아트릭스 공주의 탄생"
 holflavor.10.d:0 "Princess Juliana has given birth to the future crown princess of the Netherlands, named Beatrix Wilhelmina Armgard van Oranje-Nassau, who shall inherit the Dutch throne after her mother dies or abdicates. It is a great relief to the Dutch monarchy that an heir has been born as it will prevent a succession crisis in the future, and many people are already publicly proclaiming their congratulations for the Queen."
-holflavor.10.a:0 "Hurrah!"
+holflavor.10.a:0 "만세!"
 
 holflavor.11.t:0 "Landdag of the 국가재건연합"
 holflavor.11.d:0 "The 국가재건연합 has held its first annual landdag since gaining power in the Dutch nation. Party members from across the country have come together in Rotterdam to celebrate this joyous occasion. Cornelis van Geelkerken has held a rousing speech, after which the festivities began.\n\nAccording to Van Geelkerken, the national Jeugdstorm, the youth league of the 국가재건연합 was exceptionally important in turning the tide and giving the 국가재건연합 the chance to change the country around, but he warned that no regime is safe until syndicalism has been thoroughly rooted out. Interestingly, he failed to mention the 국가재건연합 old guard entirely, exposing tensions between the old and the new guard, experts say."
@@ -2433,7 +2433,7 @@ holflavor.18.a:0 "빌헬무스... 아 맞다, 이건 폐지된 국가였지!"
 
 holflavor.19.t:0 "독립기념일"
 holflavor.19.d:0 "It is independence day again, and thus the national holiday of the Dutch republic. People across the country are celebrating the existence of our nation, but surely also what it means to be Dutch.\nPensionary [HOL.GetLeader] held a speech over radio and clubs preparing the festivities for their own municipalities are finally unfolding the activities they have been organising for school kids."
-holflavor.19.a:0 "네덜란드 만세."
+holflavor.19.a:0 "네덜란드 만세"
 
 ### Foreign Equipment ###
 hol.301.t:0 "독일로부터 판처를 도입하다"
