--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -266,11 +266,11 @@ worldnews.62.d.centenary2:0 "With their recent victory in the South African 1938
 worldnews.62.a:0 "끔찍한 상황이군..."								  
 
 worldnews.63.t:0 "남아프리카에서 자치령이 승리하다"
-worldnews.63.d:0 "남아프리카를 황폐화시킨 내전은 인종, 정치 이념, 조상 등으로 나뉘어서 진행되었고, 격렬하고 유혈이 낭자했습니다. 자치령은 케이프를 방어하기 위해 싸웠고, 고립된 남부 로데시아는 솔즈베리를 그곳의 모든 사람들을 동원하여 보호했고 아프리카 유색인들은 두 전선에서 격렬하게 싸웠습니다. \n\n분란이 잦아들었고, 로데시아와 연방의 군대가 마침내 프레토리아에 결정적인 승리 이후에 다시 연합함에 따라 자치령이 우세해진 것으로 보입니다. 남부 로데시아가 연방에 다시 합류할 수 있다면, 그들의 용감함은 아마 로데시아 사람들을 고무시킬 것입니다. 한편, 연방은 협상국을 향해 외부로 눈길을 돌리고 있습니다."
+worldnews.63.d:0 "남아프리카를 황폐화시킨 내전은 인종, 정치 이념, 조상 등으로 나뉘어서 진행되었고, 격렬하고 유혈이 낭자했습니다. 자치령은 케이프를 방어하기 위해 싸웠고, 고립된 남로디지아는 솔즈베리를 그곳의 모든 사람들을 동원하여 보호했고 아프리카 유색인들은 두 전선에서 격렬하게 싸웠습니다. \n\n분란이 잦아들었고, 로디지아와 연방의 군대가 마침내 프레토리아에 결정적인 승리 이후에 다시 연합함에 따라 자치령이 우세해진 것으로 보입니다. 남로디지아가 연방에 다시 합류할 수 있다면, 그들의 용감함은 아마 로디지아 사람들을 고무시킬 것입니다. 한편, 연방은 협상국을 향해 외부로 눈길을 돌리고 있습니다."
 worldnews.63.a:0 "케이프에 영국인이 다시 돌아왔다."
 
 worldnews.64.t:0 "남아프리카에서 민족주의자들이 승리하다"
-worldnews.64.d:0 "남아프리카를 황폐화시킨 내전은 인종, 정치 이념, 조상 등으로 나뉘어서 진행되었고, 격렬하고 유혈이 낭자했습니다. 자치령은 케이프를 방어하기 위해 싸웠고, 고립된 남부 로데시아는 솔즈베리를 그곳의 모든 사람들을 동원하여 보호했고 아프리카 유색인들은 두 전선에서 격렬하게 싸웠습니다. \n\n분란이 잦아들었고, 남아프리카 공화국의 국기가 솔즈베리와 케이프에 자랑스럽게 나부끼면서 민족주의자들이 우세해진 것으로 보입니다. 결국 로데시아의 고립은 함락으로 이어졌고, 자치령의 군대는 아프리카의 네덜란드인들(아프리카너)의 기세를 이길 수 없었습니다. 이제, 아파르트헤이트 계획에 따라 내부로 눈길을 돌릴 것으로 예상됩니다."
+worldnews.64.d:0 "남아프리카를 황폐화시킨 내전은 인종, 정치 이념, 조상 등으로 나뉘어서 진행되었고, 격렬하고 유혈이 낭자했습니다. 자치령은 케이프를 방어하기 위해 싸웠고, 고립된 남로디지아는 솔즈베리를 그곳의 모든 사람들을 동원하여 보호했고 아프리카 유색인들은 두 전선에서 격렬하게 싸웠습니다. \n\n분란이 잦아들었고, 남아프리카 공화국의 국기가 솔즈베리와 케이프에 자랑스럽게 나부끼면서 민족주의자들이 우세해진 것으로 보입니다. 결국 로디지아의 고립은 함락으로 이어졌고, 자치령의 군대는 아프리카의 네덜란드인들(아프리카너)의 기세를 이길 수 없었습니다. 이제, 아파르트헤이트 계획에 따라 내부로 눈길을 돌릴 것으로 예상됩니다."
 worldnews.64.a:0 "네덜란드인? 지금이 18세기인가?"
 
 worldnews.65.t:0 "루마니아 내전"
