--- a/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
@@ -214,36 +214,36 @@ CEN_312_military:0 "The owner of San Pedro Sula must be Military aligned."
 CEN_842_military:0 "The owner of Honduras must be Military aligned."
 
 ### Cosmetic Tags ###
-CEN_CON_totalist:0 "Centroamérica"
-CEN_CON_totalist_ADJ:0 "Centroamérican"
-CEN_CON_totalist_DEF:0 "Centroamérica"
-CEN_CON_syndicalist:0 "Centroamérica"
-CEN_CON_syndicalist_ADJ:0 "Centroamérican"
-CEN_CON_syndicalist_DEF:0 "Centroamérica"
-CEN_CON_radical_socialist:0 "Centroamérica"
-CEN_CON_radical_socialist_ADJ:0 "Centroamérican"
-CEN_CON_radical_socialist_DEF:0 "Centroamérica"
-CEN_CON_social_democrat:0 "Central American Confederation"
-CEN_CON_social_democrat_ADJ:0 "Central American"
-CEN_CON_social_democrat_DEF:0 "the Central American Confederation"
-CEN_CON_social_liberal:0 "Central American Confederation"
-CEN_CON_social_liberal_ADJ:0 "Central American"
-CEN_CON_social_liberal_DEF:0 "the Central American Confederation"
-CEN_CON_market_liberal:0 "Central American Confederation"
-CEN_CON_market_liberal_ADJ:0 "Central American"
-CEN_CON_market_liberal_DEF:0 "the Central American Confederation"
-CEN_CON_social_conservative:0 "Central American Confederation"
-CEN_CON_social_conservative_ADJ:0 "Central American"
-CEN_CON_social_conservative_DEF:0 "the Central American Confederation"
-CEN_CON_authoritarian_democrat:0 "Central American Republic"
-CEN_CON_authoritarian_democrat_ADJ:0 "Central American"
-CEN_CON_authoritarian_democrat_DEF:0 "the Central American Republic"
-CEN_CON_paternal_autocrat:0 "Central American Republic"
-CEN_CON_paternal_autocrat_ADJ:0 "Central American"
-CEN_CON_paternal_autocrat_DEF:0 "the Central American Republic"
-CEN_CON_national_populist:0 "Central American Republic"
-CEN_CON_national_populist_ADJ:0 "Central American"
-CEN_CON_national_populist_DEF:0 "the Central American Republic"
+CEN_CON_totalist:0 "센트로아메리카"
+CEN_CON_totalist_ADJ:0 "센트로아메리카"
+CEN_CON_totalist_DEF:0 "센트로아메리카"
+CEN_CON_syndicalist:0 "센트로아메리카"
+CEN_CON_syndicalist_ADJ:0 "센트로아메리카"
+CEN_CON_syndicalist_DEF:0 "센트로아메리카"
+CEN_CON_radical_socialist:0 "센트로아메리카"
+CEN_CON_radical_socialist_ADJ:0 "센트로아메리카"
+CEN_CON_radical_socialist_DEF:0 "센트로아메리카"
+CEN_CON_social_democrat:0 "센트로아메리카 연합국"
+CEN_CON_social_democrat_ADJ:0 "중앙아메리카"
+CEN_CON_social_democrat_DEF:0 "센트로아메리카 연합국"
+CEN_CON_social_liberal:0 "센트로아메리카 연합국"
+CEN_CON_social_liberal_ADJ:0 "중앙아메리카"
+CEN_CON_social_liberal_DEF:0 "센트로아메리카 연합국"
+CEN_CON_market_liberal:0 "센트로아메리카 연합국"
+CEN_CON_market_liberal_ADJ:0 "중앙아메리카"
+CEN_CON_market_liberal_DEF:0 "센트로아메리카 연합국"
+CEN_CON_social_conservative:0 "센트로아메리카 연합국"
+CEN_CON_social_conservative_ADJ:0 "중앙아메리카"
+CEN_CON_social_conservative_DEF:0 "센트로아메리카 연합국"
+CEN_CON_authoritarian_democrat:0 "중앙아메리카 공화국"
+CEN_CON_authoritarian_democrat_ADJ:0 "중앙아메리카"
+CEN_CON_authoritarian_democrat_DEF:0 "중앙아메리카 공화국"
+CEN_CON_paternal_autocrat:0 "중앙아메리카 공화국"
+CEN_CON_paternal_autocrat_ADJ:0 "중앙아메리카"
+CEN_CON_paternal_autocrat_DEF:0 "중앙아메리카 공화국"
+CEN_CON_national_populist:0 "중앙아메리카 공화국"
+CEN_CON_national_populist_ADJ:0 "중앙아메리카"
+CEN_CON_national_populist_DEF:0 "중앙아메리카 공화국"
 
 ### Events ###
 cend.1.t:0 "[From.GetNameDefCap] Sends an Embassy"
